@@ -168,7 +168,7 @@ namespace WebCore {
 
         // Dummy method to avoid a bunch of ifdef's in WebCore.
         void evaluateInWorld(const ScriptSourceCode&, DOMWrapperWorld*) { }
-        static void getAllWorlds(Vector<DOMWrapperWorld*>&) {}
+        static void getAllWorlds(Vector<DOMWrapperWorld*>& worlds);
 
     private:
         Frame* m_frame;
